[gd_scene load_steps=3 format=2]

[ext_resource path="res://tools/move/moveTab.gd" type="Script" id=1]
[ext_resource path="res://tools/move/saveConfirm.gd" type="Script" id=2]

[node name="Move" type="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="mainSeparator" type="HBoxContainer" parent="background"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -665.796, 0 )

[node name="fileList" type="ItemList" parent="background/mainSeparator"]
margin_right = 130.0
margin_bottom = 768.0
rect_min_size = Vector2( 130, 0 )
size_flags_vertical = 3

[node name="dataPanel" type="PanelContainer" parent="background/mainSeparator"]
margin_left = 134.0
margin_right = 754.0
margin_bottom = 768.0
rect_min_size = Vector2( 620, 0 )
size_flags_vertical = 3

[node name="dataContainer" type="VBoxContainer" parent="background/mainSeparator/dataPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 613.0
margin_bottom = 761.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="identification" type="VBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer"]
margin_right = 606.0
margin_bottom = 162.0
alignment = 1

[node name="title" type="HBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer/identification"]
margin_right = 606.0
margin_bottom = 22.0

[node name="lblIdentification" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/identification/title"]
margin_right = 170.0
margin_bottom = 22.0
text = "↳ Identification "

[node name="HSeparator2" type="HSeparator" parent="background/mainSeparator/dataPanel/dataContainer/identification/title"]
margin_left = 174.0
margin_right = 606.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="fields" type="CenterContainer" parent="background/mainSeparator/dataPanel/dataContainer/identification"]
margin_top = 26.0
margin_right = 606.0
margin_bottom = 162.0

[node name="grid" type="GridContainer" parent="background/mainSeparator/dataPanel/dataContainer/identification/fields"]
margin_left = 6.0
margin_right = 600.0
margin_bottom = 136.0
rect_min_size = Vector2( 594, 0 )
columns = 2

[node name="lblName" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 27.0
text = "Name"

[node name="txtName" type="LineEdit" parent="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid"]
margin_left = 124.0
margin_right = 594.0
margin_bottom = 32.0
clear_button_enabled = true

[node name="lblShortName" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid"]
margin_top = 41.0
margin_right = 120.0
margin_bottom = 63.0
text = "Short name "

[node name="txtShortName" type="LineEdit" parent="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid"]
margin_left = 124.0
margin_top = 36.0
margin_right = 594.0
margin_bottom = 68.0
size_flags_horizontal = 3
clear_button_enabled = true

[node name="lblDescription" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid"]
margin_top = 77.0
margin_right = 120.0
margin_bottom = 99.0
text = "Description "

[node name="txtDescription" type="LineEdit" parent="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid"]
margin_left = 124.0
margin_top = 72.0
margin_right = 594.0
margin_bottom = 104.0
size_flags_horizontal = 3
clear_button_enabled = true

[node name="lblTarget" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid"]
margin_top = 111.0
margin_right = 120.0
margin_bottom = 133.0
text = "Target "

[node name="optTarget" type="OptionButton" parent="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid"]
margin_left = 124.0
margin_top = 108.0
margin_right = 294.0
margin_bottom = 136.0
rect_min_size = Vector2( 170, 0 )
size_flags_horizontal = 0
text = "None"
align = 1
items = [ "None", null, false, 0, null, "Any", null, false, 1, null, "Friendly", null, false, 2, null, "Foe", null, false, 3, null, "Any all", null, false, 4, null, "Friendly all", null, false, 5, null, "Foe all", null, false, 6, null ]
selected = 0

[node name="Control" type="Control" parent="background/mainSeparator/dataPanel/dataContainer"]
margin_top = 166.0
margin_right = 606.0
margin_bottom = 181.0
rect_min_size = Vector2( 0, 15 )

[node name="cd" type="VBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer"]
margin_top = 185.0
margin_right = 606.0
margin_bottom = 243.0

[node name="title" type="HBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer/cd"]
margin_right = 606.0
margin_bottom = 22.0

[node name="lblCd" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/cd/title"]
margin_right = 120.0
margin_bottom = 22.0
text = "↳ Cooldowns "

[node name="HSeparator2" type="HSeparator" parent="background/mainSeparator/dataPanel/dataContainer/cd/title"]
margin_left = 124.0
margin_right = 606.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="fields" type="CenterContainer" parent="background/mainSeparator/dataPanel/dataContainer/cd"]
margin_top = 26.0
margin_right = 606.0
margin_bottom = 58.0

[node name="grid" type="GridContainer" parent="background/mainSeparator/dataPanel/dataContainer/cd/fields"]
margin_left = 91.0
margin_right = 515.0
margin_bottom = 32.0
size_flags_horizontal = 3
columns = 4

[node name="lblCdPre" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/cd/fields/grid"]
margin_top = 5.0
margin_right = 40.0
margin_bottom = 27.0
text = "Pre "

[node name="sbCdPre" type="SpinBox" parent="background/mainSeparator/dataPanel/dataContainer/cd/fields/grid"]
margin_left = 44.0
margin_right = 190.0
margin_bottom = 32.0

[node name="lblCdPos" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/cd/fields/grid"]
margin_left = 194.0
margin_top = 5.0
margin_right = 274.0
margin_bottom = 27.0
text = "   Post "

[node name="sbCdPos" type="SpinBox" parent="background/mainSeparator/dataPanel/dataContainer/cd/fields/grid"]
margin_left = 278.0
margin_right = 424.0
margin_bottom = 32.0

[node name="Control2" type="Control" parent="background/mainSeparator/dataPanel/dataContainer"]
margin_top = 247.0
margin_right = 606.0
margin_bottom = 262.0
rect_min_size = Vector2( 0, 15 )

[node name="animations" type="VBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer"]
margin_top = 266.0
margin_right = 606.0
margin_bottom = 360.0
alignment = 1

[node name="title" type="HBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer/animations"]
margin_right = 606.0
margin_bottom = 22.0

[node name="lblAnimations" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/animations/title"]
margin_right = 130.0
margin_bottom = 22.0
text = "↳ Animations "

[node name="HSeparator2" type="HSeparator" parent="background/mainSeparator/dataPanel/dataContainer/animations/title"]
margin_left = 134.0
margin_right = 606.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="fields" type="CenterContainer" parent="background/mainSeparator/dataPanel/dataContainer/animations"]
margin_top = 26.0
margin_right = 606.0
margin_bottom = 94.0

[node name="grid" type="GridContainer" parent="background/mainSeparator/dataPanel/dataContainer/animations/fields"]
margin_left = 6.0
margin_right = 600.0
margin_bottom = 68.0
rect_min_size = Vector2( 594, 0 )
columns = 2

[node name="lblAnimPrepare" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/animations/fields/grid"]
margin_top = 5.0
margin_right = 80.0
margin_bottom = 27.0
text = "Prepare "

[node name="txtAnimPrepare" type="LineEdit" parent="background/mainSeparator/dataPanel/dataContainer/animations/fields/grid"]
margin_left = 84.0
margin_right = 594.0
margin_bottom = 32.0
clear_button_enabled = true

[node name="lblAnimAttack" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/animations/fields/grid"]
margin_top = 41.0
margin_right = 80.0
margin_bottom = 63.0
text = "Attack "

[node name="txtAnimAttack" type="LineEdit" parent="background/mainSeparator/dataPanel/dataContainer/animations/fields/grid"]
margin_left = 84.0
margin_top = 36.0
margin_right = 594.0
margin_bottom = 68.0
size_flags_horizontal = 3
clear_button_enabled = true

[node name="Control3" type="Control" parent="background/mainSeparator/dataPanel/dataContainer"]
margin_top = 364.0
margin_right = 606.0
margin_bottom = 379.0
rect_min_size = Vector2( 0, 15 )

[node name="Modifiers" type="VBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer"]
margin_top = 383.0
margin_right = 606.0
margin_bottom = 539.0

[node name="title" type="HBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer/Modifiers"]
margin_right = 606.0
margin_bottom = 22.0

[node name="lblModifiers" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/Modifiers/title"]
margin_right = 120.0
margin_bottom = 22.0
text = "↳ Modifiers "

[node name="HSeparator2" type="HSeparator" parent="background/mainSeparator/dataPanel/dataContainer/Modifiers/title"]
margin_left = 124.0
margin_right = 606.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="fields" type="CenterContainer" parent="background/mainSeparator/dataPanel/dataContainer/Modifiers"]
margin_top = 26.0
margin_right = 606.0
margin_bottom = 156.0

[node name="grid" type="GridContainer" parent="background/mainSeparator/dataPanel/dataContainer/Modifiers/fields"]
margin_left = 41.0
margin_right = 565.0
margin_bottom = 130.0
columns = 4

[node name="lblExecutor" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/Modifiers/fields/grid"]
margin_right = 100.0
margin_bottom = 22.0
text = "Executor ⬎"

[node name="Control" type="Control" parent="background/mainSeparator/dataPanel/dataContainer/Modifiers/fields/grid"]
margin_left = 104.0
margin_right = 250.0
margin_bottom = 22.0

[node name="lblTarget" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/Modifiers/fields/grid"]
margin_left = 254.0
margin_right = 374.0
margin_bottom = 22.0
text = "   Target ⬎"

[node name="Control2" type="Control" parent="background/mainSeparator/dataPanel/dataContainer/Modifiers/fields/grid"]
margin_left = 378.0
margin_right = 524.0
margin_bottom = 22.0

[node name="lblModAttack" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/Modifiers/fields/grid"]
margin_top = 31.0
margin_right = 100.0
margin_bottom = 53.0
text = "Attack "

[node name="sbModAtkEx" type="SpinBox" parent="background/mainSeparator/dataPanel/dataContainer/Modifiers/fields/grid"]
margin_left = 104.0
margin_top = 26.0
margin_right = 250.0
margin_bottom = 58.0
min_value = -3.0
max_value = 3.0

[node name="lblModAttack2" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/Modifiers/fields/grid"]
margin_left = 254.0
margin_top = 31.0
margin_right = 374.0
margin_bottom = 53.0
text = "   Attack "

[node name="sbModAtkTrg" type="SpinBox" parent="background/mainSeparator/dataPanel/dataContainer/Modifiers/fields/grid"]
margin_left = 378.0
margin_top = 26.0
margin_right = 524.0
margin_bottom = 58.0
min_value = -3.0
max_value = 3.0

[node name="lblModDefense" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/Modifiers/fields/grid"]
margin_top = 67.0
margin_right = 100.0
margin_bottom = 89.0
text = "Defense "

[node name="sbModDefEx" type="SpinBox" parent="background/mainSeparator/dataPanel/dataContainer/Modifiers/fields/grid"]
margin_left = 104.0
margin_top = 62.0
margin_right = 250.0
margin_bottom = 94.0
min_value = -3.0
max_value = 3.0

[node name="lblModDefense2" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/Modifiers/fields/grid"]
margin_left = 254.0
margin_top = 67.0
margin_right = 374.0
margin_bottom = 89.0
text = "   Defense "

[node name="sbModDefTrg" type="SpinBox" parent="background/mainSeparator/dataPanel/dataContainer/Modifiers/fields/grid"]
margin_left = 378.0
margin_top = 62.0
margin_right = 524.0
margin_bottom = 94.0
min_value = -3.0
max_value = 3.0

[node name="lblModCd" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/Modifiers/fields/grid"]
margin_top = 103.0
margin_right = 100.0
margin_bottom = 125.0
text = "Cooldown "

[node name="sbModCdEx" type="SpinBox" parent="background/mainSeparator/dataPanel/dataContainer/Modifiers/fields/grid"]
margin_left = 104.0
margin_top = 98.0
margin_right = 250.0
margin_bottom = 130.0
min_value = -3.0
max_value = 3.0

[node name="lblModCd2" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/Modifiers/fields/grid"]
margin_left = 254.0
margin_top = 103.0
margin_right = 374.0
margin_bottom = 125.0
text = "   Cooldown "

[node name="sbModCdTrg" type="SpinBox" parent="background/mainSeparator/dataPanel/dataContainer/Modifiers/fields/grid"]
margin_left = 378.0
margin_top = 98.0
margin_right = 524.0
margin_bottom = 130.0
min_value = -3.0
max_value = 3.0

[node name="Control4" type="Control" parent="background/mainSeparator/dataPanel/dataContainer"]
margin_top = 543.0
margin_right = 606.0
margin_bottom = 558.0
rect_min_size = Vector2( 0, 15 )

[node name="buttons" type="VBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer"]
margin_top = 562.0
margin_right = 606.0
margin_bottom = 754.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer/buttons"]
margin_top = 164.0
margin_right = 606.0
margin_bottom = 192.0
alignment = 1

[node name="Control" type="Control" parent="background/mainSeparator/dataPanel/dataContainer/buttons/HBoxContainer"]
margin_right = 126.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="btnSave" type="Button" parent="background/mainSeparator/dataPanel/dataContainer/buttons/HBoxContainer"]
margin_left = 130.0
margin_right = 256.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "Save|Create"

[node name="Control2" type="Control" parent="background/mainSeparator/dataPanel/dataContainer/buttons/HBoxContainer"]
margin_left = 260.0
margin_right = 310.0
margin_bottom = 28.0
rect_min_size = Vector2( 50, 0 )

[node name="btnReload" type="Button" parent="background/mainSeparator/dataPanel/dataContainer/buttons/HBoxContainer"]
margin_left = 314.0
margin_right = 476.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "Reload entities"

[node name="Control3" type="Control" parent="background/mainSeparator/dataPanel/dataContainer/buttons/HBoxContainer"]
margin_left = 480.0
margin_right = 606.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="background/mainSeparator"]
margin_left = 758.0
margin_right = 1358.0
margin_bottom = 768.0
rect_min_size = Vector2( 600, 0 )
size_flags_vertical = 3

[node name="logic" type="VBoxContainer" parent="background/mainSeparator/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 593.0
margin_bottom = 761.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="title" type="HBoxContainer" parent="background/mainSeparator/PanelContainer/logic"]
margin_right = 586.0
margin_bottom = 22.0

[node name="lblLogic" type="Label" parent="background/mainSeparator/PanelContainer/logic/title"]
margin_right = 80.0
margin_bottom = 22.0
text = "↳ Logic "

[node name="HSeparator2" type="HSeparator" parent="background/mainSeparator/PanelContainer/logic/title"]
margin_left = 84.0
margin_right = 586.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="tabs" type="TabContainer" parent="background/mainSeparator/PanelContainer/logic"]
margin_top = 26.0
margin_right = 586.0
margin_bottom = 754.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Value" type="Tabs" parent="background/mainSeparator/PanelContainer/logic/tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 40.0
margin_right = -4.0
margin_bottom = -4.0

[node name="txtValue" type="TextEdit" parent="background/mainSeparator/PanelContainer/logic/tabs/Value"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
bookmark_gutter = true
highlight_all_occurrences = true

[node name="Outcome" type="Tabs" parent="background/mainSeparator/PanelContainer/logic/tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 40.0
margin_right = -4.0
margin_bottom = -4.0

[node name="txtOutcome" type="TextEdit" parent="background/mainSeparator/PanelContainer/logic/tabs/Outcome"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
bookmark_gutter = true
highlight_all_occurrences = true

[node name="Pick" type="Tabs" parent="background/mainSeparator/PanelContainer/logic/tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 40.0
margin_right = -4.0
margin_bottom = -4.0

[node name="txtPick" type="TextEdit" parent="background/mainSeparator/PanelContainer/logic/tabs/Pick"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
bookmark_gutter = true
highlight_all_occurrences = true

[node name="Execute" type="Tabs" parent="background/mainSeparator/PanelContainer/logic/tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 40.0
margin_right = -4.0
margin_bottom = -4.0

[node name="txtExecute" type="TextEdit" parent="background/mainSeparator/PanelContainer/logic/tabs/Execute"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
bookmark_gutter = true
highlight_all_occurrences = true

[node name="saveConfirm" type="ConfirmationDialog" parent="."]
margin_right = 218.0
margin_bottom = 74.0
script = ExtResource( 2 )
